--- a/Homepage draft 1 (simone).html
+++ b/Homepage draft 1 (simone).html
@@ -73,9 +73,8 @@
     </div>
     <div class="navbar">
       <a href="Homepage2.html" class="active">Home</a>
-      <a href="#" class="active">About Us</a>
+      <a href="newPage.html" class="active">About Us</a>
       <a href="#" class="active">Contact</a>
-      <a href="newPage.html" class="active">Contact</a>
     </div>
     
    
