--- a/CountryPage.html
+++ b/CountryPage.html
@@ -11,12 +11,12 @@
             <!-- Insert the Country Name-->
             <h1>COUNTRY</h1>
             <div class="banner-btn">
-                <a href="#">Flights/Trains</a>
-                <a href="#">Culture</a>
-                <a href="#">Local Dialect</a>
-                <a href="#">Safety</a>
-                <a href="#">History</a>
-                <a href="#">Local Food/Cuisine</a>
+                <a href="#"><span></span>Flights/Trains</a>
+                <a href="#"><span></span>Culture</a>
+                <a href="#"><span></span>Local Dialect</a>
+                <a href="#"><span></span>Safety</a>
+                <a href="#"><span></span>History</a>
+                <a href="#"><span></span>Local Food/Cuisine</a>
             </div>
         </div>
     </section>
