--- a/CountryPage.html
+++ b/CountryPage.html
@@ -3,14 +3,14 @@
     <title> COUNTRY</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--Connecting Camila.html and style.css-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
   </head>
   <body>
     <section id="banner">
-        <div class="banner-text">
+        <div class="countryText">
             <!-- Insert the Country Name-->
             <h1>COUNTRY</h1>
-            <div class="banner-btn">
+            <div class="tabs">
                 <a href="#"><span></span>Flights/Trains</a>
                 <a href="#"><span></span>Culture</a>
                 <a href="#"><span></span>Local Dialect</a>
