--- a/CountryPage.html
+++ b/CountryPage.html
@@ -4,19 +4,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--Connecting Camila.html and style.css-->
     <link rel="stylesheet" href="style.css">
-  </head>
+
+    <style>
+     .circleFlight {
+      height: 100px;
+      width: 100px;
+      line-height: 100px;
+      display: inline-block;
+      background-color: aliceblue;
+      border-radius: 50%;
+      text-align: center;
+     }
+    </style>
+
+</head>
   <body>
     <section id="banner">
         <div class="banner-text">
             <!-- Insert the Country Name-->
             <h1>COUNTRY</h1>
+           
             <div class="banner-btn">
-                <a href="#"><span></span>Flights/Trains</a>
-                <a href="#"><span></span>Culture</a>
-                <a href="#"><span></span>Local Dialect</a>
-                <a href="#"><span></span>Safety</a>
-                <a href="#"><span></span>History</a>
-                <a href="#"><span></span>Local Food/Cuisine</a>
+              <div class="circleFlight">Flight
+                <span class="dot"></span></a>
+              </div>
+              <div class="circleFlight">Culture
+                <span class="dot"></span></a>
+              </div>
+              <div class="circleFlight">Dialect
+                <span class="dot"></span></a>
+              </div>
+              <div class="circleFlight">Safety
+                <span class="dot"></span></a>
+              </div>
+              <div class="circleFlight">History
+                <span class="dot"></span></a>
+              </div>
+              <div class="circleFlight">Local Food
+                <span class="dot"></span></a>
+              </div>
             </div>
         </div>
     </section>
