Michaels website country thingy mabob

--- a/Website.html
+++ b/Website.html
@@ -12,6 +12,11 @@
       padding: 20px;
       margin: 0;
     }
+    h2 {
+      background-color: lightblue;
+      padding: 20px;
+      margin: 0;
+    }
     .ribbon {
       background-color: lightgray;
       padding: 20px;
@@ -26,21 +31,29 @@
       padding: 10px;
     }
     .navbar a {
+      display: inline-block;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      background-color: white;
+      color: lightblue;
       text-decoration: none;
-      color: white;
-      padding: 20px;
+      text-align: center;
+      line-height: 40px;
+      margin: 0 10px;
     }
   </style>
 </head>
 <body>
   <h1>The Traveler's Handbook</h1>
+  <h2>Country</h2>
   <div class="navbar">
-    <a href="#flights">Flights</a>
-    <a href="#culture">Culture</a>
-    <a href="#dialect">Local Dialect</a>
-    <a href="#safety">Safety</a>
-    <a href="#history">History</a>
-    <a href="#food">Local Food</a>
+    <a href="#flights">✈️</a>
+    <a href="#culture">🎭</a>
+    <a href="#dialect">💬</a>
+    <a href="#safety">🛡️</a>
+    <a href="#history">📜</a>
+    <a href="#food">🍴</a>
   </div>
   <div class="ribbon">
     <h2 id="flights">Flights</h2>
