Homepage w/ search button

--- a/CountryPageSimone.html
+++ b/CountryPageSimone.html
@@ -14,7 +14,14 @@
       background-color: aliceblue;
       border-radius: 50%;
       text-align: center;
+      position: relative;
+      left: 25%;
+      top: 250px;
      }
+     .title {
+      float: center;
+     }
+
     </style>
 
 </head>
@@ -23,7 +30,6 @@
         <div class="banner-text">
             <!-- Insert the Country Name-->
             <h1>COUNTRY</h1>
-           
             <div class="banner-btn">
               <div class="circleFlight">Flight
                 <span class="dot"></span></a>
