AboutUs with Info

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -31,7 +31,7 @@
         overflow: hidden;
         background-color: white;
         position: absolute;
-        padding: 10px;
+        padding: 5px;
         width: 100%;
         top: 0;
         left: 0;
@@ -44,26 +44,54 @@
         padding: 14px 20px;
         text-decoration: none;
       }
-      .data{
-        overflow: hidden;
-        background-color: rgba(128, 128, 128, 0.348);
-        position: relative;
-        padding-inline: 10px;
-        width: 100%;
-      }
-
-      .data p{
-        float: center;
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 20px;
-        text-decoration: none;
-      }
-      .headerText h2{
+      .text h2{
         /*font size*/
         font-size: 30px;
         text-align: left;
+        color: black;
+        padding-left: 50px;
+      }
+      .text h3{
+        /*font size*/
+        font-size: 30px;
+        text-align: left;
+        color: black;
+        padding-left: 50px;
+      }
+      .text h4{
+        /*font size*/
+        font-size: 30px;
+        text-align: left;
+        color: black;
+        padding-left: 50px;
+      }
+      /*.text{
+        overflow: hidden;
+        background-color: rgba(128, 128, 128, 0.548);
+        position: relative;
+        padding-left: 100px;
+        width: 100%;
+      }*/
+
+      .text{
+        width: 800px;
+        border: 5px solid rgba(128, 128, 128, 0.471);  
+        background-color: rgba(128, 128, 128, 0.471);
+        padding-top: 25px;
+        position: relative;
+        margin-left: 200px;
+        height: 360px;
+      }
+
+      .text p{
+        float: center;
+        display: block;
+        color: black;
+        text-align: left;
+        padding-left: 50px;
+        text-decoration: none;
+        font-size: 20px;
+
       }
     </style>
     <body>
@@ -77,6 +105,17 @@
                 </div>
                 <div class="text">
                     <h2>Our Story</h2>
+                    <p>We are a group of students that came together to create something for our society. </p>
+                    <p>thought about this website could be useful for UGA students and anyone that is seeking a destination.</p>
+                    
+                    <h3>Our Mission</h3>
+                    <p>We want people to explore the world and learn about different cultures, cuisine, and the rich history that every  </p>
+                    <p>country has to offer. </p>
+                    <p>These are the essentials that any tourist need when they go to a new destination.</p>
+
+                    <h4>Our Services</h4>
+                    <p>On our website, the user can find transportation information, culture, the local dialect, safety, history, and cuisine of the country they desire to search.
+                    </p>
                 </div>
             </div>
         
