--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <!--Logo-->
+  <link rel="shortcut icon" type="x-icon" href="PlaneLogo.png">
     <head> 
         <title>About Us</title>
     </head>
