--- a/Homepage draft 1 (simone).html
+++ b/Homepage draft 1 (simone).html
@@ -85,9 +85,9 @@
       </div>
     </div>
     <div class="navbar">
-      <a href="Homepage2.html" class="active">Home</a>
-      <a href="newPage.html" class="active">About Us</a>
-      <a href="#" class="active">Contact</a>
+      <a href="Homepage draft 1 (simone).html" class="active">Home</a>
+      <a href="AboutUs.html" class="active">About Us</a>
+      <a href="ContactInfo.html" class="active">Contact</a>
     </div>
     
    
