new commit 4:23 pm

--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -75,7 +75,7 @@
                 <p>----------------------------------------------</p>
                 <p>How to reach us:</p>
                 <div class="navbar">
-                    <a href="Homepage2.html" class="active">Home</a>
+                    <a href="Homepage draft 1 (simone).html" class="active">Home</a>
                     <a href="newPage.html" class="active">About Us</a>
                     <a href="#" class="active">Contact</a>
                 </div>
