Old version of draft 1

--- a/Homepage draft 1 (simone).html
+++ b/Homepage draft 1 (simone).html
@@ -79,7 +79,7 @@
         <input type="input" class="search-bar" placeholder="Search for a country..." style="color:black";>
       </form>
       <div class="search-btn">
-        <button style="color: black;" onclick="document.location='pythonWebsite.py">
+        <button style="color: black;" onclick="document.location='pythonWebsite.py'>
         Search
         </button>
       </div>
