--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -75,9 +75,9 @@
                 <p>----------------------------------------------</p>
                 <p>How to reach us:</p>
                 <div class="navbar">
-                    <a href="Homepage2.html" class="active">Home</a>
-                    <a href="newPage.html" class="active">About Us</a>
-                    <a href="#" class="active">Contact</a>
+                    <a href="Homepage draft 1 (simone).html" class="active">Home</a>
+                    <a href="AboutUs.html" class="active">About Us</a>
+                    <a href="ContactInfo.html" class="active">Contact</a>
                 </div>
                 <div class="data">
                     <p>Phone number: xxx-xxx-xxxx</p>
