Revert "Merge branch 'master' of https://github.com/KevintrDo/UGAHacks"
This reverts commit a9955b2d9c13eb42e778d4f075919a93b1e48e39, reversing
changes made to b93d4711fadd6d4ffd523f99323a6cfeda9b7658.

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,7 +33,7 @@
         overflow: hidden;
         background-color: white;
         position: absolute;
-        padding: 10px;
+        padding: 5px;
         width: 100%;
         top: 0;
         left: 0;
@@ -78,18 +78,17 @@
       .text{
         width: 800px;
         border: 5px solid rgba(128, 128, 128, 0.471);  
-        background-color: rgba(128, 128, 128, 0.697);
+        background-color: rgba(128, 128, 128, 0.471);
         padding-top: 25px;
         position: relative;
         margin-left: 200px;
-        height: 440px;
+        height: 360px;
       }
 
       .text p{
         float: center;
         display: block;
         color: black;
-        font-weight: bold;
         text-align: left;
         padding-left: 50px;
         text-decoration: none;
@@ -102,25 +101,23 @@
             <div class="headerText">
                 <h1>About Us</h1>
                 <div class="navbar">
-                    <a href="Homepage draft 1 (simone).html" class="active">Home</a>
-                    <a href="AboutUs.html" class="active">About Us</a>
-                    <a href="ContactInfo.html" class="active">Contact</a>
+                    <a href="Homepage2.html" class="active">Home</a>
+                    <a href="newPage.html" class="active">About Us</a>
+                    <a href="#" class="active">Contact</a>
                 </div>
                 <div class="text">
-                    <h2><u>Our Story</u></h2>
+                    <h2>Our Story</h2>
                     <p>We are a group of students that came together to create something for our society. </p>
-                    <p>We thought about this website could be useful for UGA students and anyone that is seeking a destination.</p>
-                    <p> <br> </br> </p>
+                    <p>thought about this website could be useful for UGA students and anyone that is seeking a destination.</p>
                     
-                    <h3><u>Our Mission</u></h3>
-                    <p>We want people to explore the world and learn about different cultures, cuisine, and the rich history that every country has to offer. </p>
+                    <h3>Our Mission</h3>
+                    <p>We want people to explore the world and learn about different cultures, cuisine, and the rich history that every  </p>
+                    <p>country has to offer. </p>
                     <p>These are the essentials that any tourist need when they go to a new destination.</p>
-                    <p> <br> </br> </p>
 
-                    <h4><u> Services</u></h4>
+                    <h4>Our Services</h4>
                     <p>On our website, the user can find transportation information, culture, the local dialect, safety, history, and cuisine of the country they desire to search.
                     </p>
-                    <p> <br> </br> </p>
                 </div>
             </div>
         
