Food/comments added

--- a/Food.html
+++ b/Food.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>Safety</title>
+        <title>Local Food/Cuisine</title>
     </head>
 
     <style>
@@ -18,7 +18,6 @@
             background-position: center;
             height: 100vh;
         }
-
         /**
         style of the text of the header
         */
@@ -35,7 +34,7 @@
         .headerText h1{
             font-size: 50px;
         }
-
+        
         /**
         style of the p text
         */
@@ -43,7 +42,6 @@
             font-size: 15px;
             font-style: normal;
         }
-
         /**
         style of the navigation bar
         */
@@ -97,16 +95,16 @@
     <body>
         <section id="header">
             <div class="headerText">
-                <h1>Safety</h1>
+                <h1>Cuisine</h1>
                 <!--Input Country-->
-                <p>Here are some tips when it comes to safety of (input Country)</p>
+                <p>The Cuisine of (input Country)</p>
                 <div class="navbar">
                     <a href="Homepage draft 1 (simone).html" class="active">Home</a>
                     <a href="AboutUs.html" class="active">About Us</a>
                     <a href="ContactInfo.html" class="active">Contact</a>
                 </div>
                 <div class="data">
-                    <p>this is where the info will go                    </p>
+                    <p>this is where the data will go                    </p>
                 </div>
             </div>
         
