--- a/Culture.html
+++ b/Culture.html
@@ -18,19 +18,33 @@
             background-position: center;
             height: 100vh;
         }
+        /**
+        style of the text of the header
+        */
         .headerText{
             text-align: center;
             color: black;
             padding-top: 100px;
 
         }
+
+        /**
+        style of the h1 text
+        */
         .headerText h1{
             font-size: 50px;
         }
+        
+        /**
+        style of the p text
+        */
         .headerText p{
             font-size: 15px;
             font-style: normal;
         }
+        /**
+        style of the navigation bar
+        */
         .navbar {
         overflow: hidden;
         background-color: white;
@@ -40,6 +54,10 @@
         top: 0;
         left: 0;
       }
+
+      /**
+        style of the navigation bar
+        */
       .navbar a {
         float: left;
         display: block;
@@ -48,6 +66,10 @@
         padding: 14px 20px;
         text-decoration: none;
       }
+
+      /**
+        style of the data
+        */
       .data{
         overflow: hidden;
         background-color: rgba(128, 128, 128, 0.348);
@@ -56,6 +78,9 @@
         width: 100%;
       }
 
+      /**
+        style of the data p
+        */
       .data p{
         float: center;
         display: block;
@@ -65,6 +90,8 @@
         text-decoration: none;
       }
     </style>
+
+    <!--Allows the user to go to the navigation links-->
     <body>
         <section id="header">
             <div class="headerText">
