--- a/Dialect.html
+++ b/Dialect.html
@@ -17,19 +17,35 @@
         background-position: center;
         height: 100vh;
     }
+
+    /**
+        style of the text of the header
+        */
     .headerText{
         text-align: center;
         color: black;
         padding-top: 100px;
 
     }
+
+    /**
+        style of the h1 text
+        */
     .headerText h1{
         font-size: 50px;
     }
+
+    /**
+        style of the p text
+        */
     .headerText p{
         font-size: 15px;
         font-style: normal;
     }
+
+    /**
+        style of the navigation bar
+        */
     .navbar {
     overflow: hidden;
     background-color: white;
@@ -39,6 +55,10 @@
     top: 0;
     left: 0;
   }
+
+  /**
+        style of the navigation bar
+        */
   .navbar a {
     float: left;
     display: block;
@@ -47,6 +67,10 @@
     padding: 14px 20px;
     text-decoration: none;
   }
+
+  /**
+        style of the data 
+        */
   .data{
     overflow: hidden;
     background-color: rgba(128, 128, 128, 0.348);
@@ -55,6 +79,9 @@
     width: 100%;
   }
 
+  /**
+        style of the data p
+        */
   .data p{
     float: center;
     display: block;
@@ -64,6 +91,8 @@
     text-decoration: none;
   }
 </style>
+
+<!--Allows the user to go to the navigation links-->
 <body>
     <section id="header">
         <div class="headerText">
