--- a/Culture.html
+++ b/Culture.html
@@ -13,22 +13,21 @@
         style of the website
         */
         #header{
-            background: rgb(87, 165, 229);
+            background-image: url("https://c4.wallpaperflare.com/wallpaper/242/751/788/tajmahal-indian-culture-desktop-wallpaper-hd-1920%C3%971200-wallpaper-preview.jpg");
             background-size: cover;
             background-position: center;
             height: 100vh;
         }
         .headerText{
             text-align: center;
-            color: black;
+            color: #fff;
             padding-top: 100px;
-
         }
         .headerText h1{
-            font-size: 50px;
+            font-size: 200px;
         }
         .headerText p{
-            font-size: 15px;
+            font-size: 55px;
             font-style: normal;
         }
         .navbar {
