Michael's  language, culture, history, and stuff

--- a/Food.html
+++ b/Food.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>Local Food/Cuisine</title>
+        <title>Culture</title>
     </head>
 
     <style>
@@ -13,7 +13,7 @@
         style of the website
         */
         #header{
-            background: rgb(87, 165, 229);
+            background-image: url("https://c4.wallpaperflare.com/wallpaper/495/760/53/cuisine-food-india-indian-wallpaper-preview.jpg");
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -23,23 +23,22 @@
         */
         .headerText{
             text-align: center;
-            color: black;
+            color: #fff;
             padding-top: 100px;
-
         }
 
         /**
         style of the h1 text
         */
         .headerText h1{
-            font-size: 50px;
+            font-size: 200px;
         }
         
         /**
         style of the p text
         */
         .headerText p{
-            font-size: 15px;
+            font-size: 55px;
             font-style: normal;
         }
         /**
@@ -89,8 +88,7 @@
         padding: 14px 20px;
         text-decoration: none;
       }
-    </style>
-
+  </style>
     <!--Allows the user to go to the navigation links-->
     <body>
         <section id="header">
