--- a/Safety.html
+++ b/Safety.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>Safety</title>
+        <title>Culture</title>
     </head>
 
     <style>
@@ -13,37 +13,34 @@
         style of the website
         */
         #header{
-            background: rgb(87, 165, 229);
+            background-image: url("https://c1.wallpaperflare.com/preview/400/716/42/cyber-security-online-computer-cyber.jpg");
             background-size: cover;
             background-position: center;
             height: 100vh;
         }
-
         /**
         style of the text of the header
         */
         .headerText{
             text-align: center;
-            color: black;
-            padding-top: 100px;
-
+            color: #000000;
+            padding-top: 80px;
         }
 
         /**
         style of the h1 text
         */
         .headerText h1{
-            font-size: 50px;
+            font-size: 200px;
         }
-
+        
         /**
         style of the p text
         */
         .headerText p{
-            font-size: 15px;
+            font-size: 55px;
             font-style: normal;
         }
-
         /**
         style of the navigation bar
         */
