--- a/Dialect.html
+++ b/Dialect.html
@@ -4,66 +4,90 @@
         <title>Culture</title>
     </head>
 
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-    }
-    /**
-    style of the website
-    */
-    #header{
-        background: rgb(87, 165, 229);
-        background-size: cover;
-        background-position: center;
-        height: 100vh;
-    }
-    .headerText{
-        text-align: center;
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        /**
+        style of the website
+        */
+        #header{
+            background-image: url("https://e0.pxfuel.com/wallpapers/1006/395/desktop-wallpaper-language-training-archives-the-intellekt-group-language-learning.jpg");
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+        }
+        /**
+        style of the text of the header
+        */
+        .headerText{
+            text-align: center;
+            color: #000000;
+            padding-top: 100px;
+        }
+
+        /**
+        style of the h1 text
+        */
+        .headerText h1{
+            font-size: 200px;
+        }
+        
+        /**
+        style of the p text
+        */
+        .headerText p{
+            font-size: 55px;
+            font-style: normal;
+        }
+        /**
+        style of the navigation bar
+        */
+        .navbar {
+        overflow: hidden;
+        background-color: white;
+        position: absolute;
+        padding: 10px;
+        width: 100%;
+        top: 0;
+        left: 0;
+      }
+
+      /**
+        style of the navigation bar
+        */
+      .navbar a {
+        float: left;
+        display: block;
         color: black;
-        padding-top: 100px;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
 
-    }
-    .headerText h1{
-        font-size: 50px;
-    }
-    .headerText p{
-        font-size: 15px;
-        font-style: normal;
-    }
-    .navbar {
-    overflow: hidden;
-    background-color: white;
-    position: absolute;
-    padding: 10px;
-    width: 100%;
-    top: 0;
-    left: 0;
-  }
-  .navbar a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  .data{
-    overflow: hidden;
-    background-color: rgba(128, 128, 128, 0.348);
-    position: relative;
-    padding-inline: 10px;
-    width: 100%;
-  }
+      /**
+        style of the data
+        */
+      .data{
+        overflow: hidden;
+        background-color: rgba(128, 128, 128, 0.348);
+        position: relative;
+        padding-inline: 10px;
+        width: 100%;
+      }
 
-  .data p{
-    float: center;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
+      /**
+        style of the data p
+        */
+      .data p{
+        float: center;
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
 </style>
 <body>
     <section id="header">
