--- a/History.html
+++ b/History.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>History</title>
+        <title>Culture</title>
     </head>
 
     <style>
@@ -13,24 +13,39 @@
         style of the website
         */
         #header{
-            background: rgb(87, 165, 229);
+            background-image: url("https://c4.wallpaperflare.com/wallpaper/219/894/458/5bd329b2b5293-wallpaper-preview.jpg");
             background-size: cover;
             background-position: center;
             height: 100vh;
         }
+        /**
+        style of the text of the header
+        */
         .headerText{
             text-align: center;
-            color: black;
+            color: #fff;
             padding-top: 100px;
+        }
 
-        }
+        /**
+        style of the h1 text
+        */
         .headerText h1{
-            font-size: 50px;
+            font-size: 150px;
+            color: #fff;
         }
+        
+        /**
+        style of the p text
+        */
         .headerText p{
-            font-size: 15px;
+            font-size: 25px;
+            color: #fff;
             font-style: normal;
         }
+        /**
+        style of the navigation bar
+        */
         .navbar {
         overflow: hidden;
         background-color: white;
@@ -40,6 +55,10 @@
         top: 0;
         left: 0;
       }
+
+      /**
+        style of the navigation bar
+        */
       .navbar a {
         float: left;
         display: block;
@@ -48,6 +67,10 @@
         padding: 14px 20px;
         text-decoration: none;
       }
+
+      /**
+        style of the data
+        */
       .data{
         overflow: hidden;
         background-color: rgba(128, 128, 128, 0.348);
@@ -56,10 +79,13 @@
         width: 100%;
       }
 
+      /**
+        style of the data p
+        */
       .data p{
         float: center;
         display: block;
-        color: black;
+        color: white;
         text-align: center;
         padding: 14px 20px;
         text-decoration: none;
