moved search button & made it bigger

--- a/Homepage draft 1 (simone).html
+++ b/Homepage draft 1 (simone).html
@@ -71,13 +71,20 @@
       .search-btn {
         margin: 10px;
       }
+      .submit-btn {
+        display: block;
+        position: absolute;
+        left: 710px;
+        top: 335px;
+        padding: 5px;
+      }
     </style>
   </head>
   <body>
     <div class="search-container">
       <form id="countryForm" name="country_form">
         <input type="input" id="country" class="search-bar" placeholder="Search for a country..." style="color:black";>
-        <input type="submit" value="Search">
+        <input class="submit-btn" type="submit" value="Search">
       </form>
     </div>
     <div class="navbar">
