--- a/History.html
+++ b/History.html
@@ -98,22 +98,12 @@
                 <!--Input Country-->
                 <p>The History Behind (input Country)</p>
                 <div class="navbar">
-                    <a href="Homepage2.html" class="active">Home</a>
-                    <a href="newPage.html" class="active">About Us</a>
-                    <a href="#" class="active">Contact</a>
+                    <a href="Homepage draft 1 (simone).html" class="active">Home</a>
+                    <a href="AboutUs.html" class="active">About Us</a>
+                    <a href="ContactInfo.html" class="active">Contact</a>
                 </div>
                 <div class="data">
-                    <p>this is where the info will go
-                        “change the information in one pane, the IDE automatically updates the information in all the other panes.
-An IDE helps you move seamlessly from one part of the programming endeavor to another. With an IDE, you don’t have to worry about the mechanics of editing, compiling, and running a JVM. Instead, you can worry about the logic of writing programs. (Wouldn’t you know it? One way or another, you always have something to worry about!)
-In the chapters that follow, I describe basic features of the Eclipse IDE. Eclipse has many bells and whistles, but you can ignore most of them and learn to repeat a few routine sequences of steps. After using Eclipse a few times, your brain automatically performs the routine steps. From then on, you can stop worrying about Eclipse and concentrate on Java programming.
-As you read my paragraphs about Eclipse, remember that Java and Eclipse aren’t wedded to one another. The programs in this”
-
-Excerpt From
-Beginning Programming with Java For Dummies (For Dummies (Computers))
-Burd, Barry A.
-https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewBook?id=0
-This material may be protected by copyright.
+                    <p>This is where the info will go.
                     </p>
                 </div>
             </div>
