--- a/Dialect.html
+++ b/Dialect.html
@@ -92,9 +92,9 @@
 <body>
     <section id="header">
         <div class="headerText">
-            <h1>Local Dialect</h1>
+            <h1>Language</h1>
             <!--Input Country-->
-            <p>Here are some tips when it comes to the dialects of (input Country)</p>
+            <p>Here are some sentences to help you communicate with the local public(input Country)</p>
             <div class="navbar">
                 <a href="Homepage draft 1 (simone).html" class="active">Home</a>
                 <a href="AboutUs.html" class="active">About Us</a>
