--- a/History.html
+++ b/History.html
@@ -98,9 +98,9 @@
                 <!--Input Country-->
                 <p>The History Behind (input Country)</p>
                 <div class="navbar">
-                    <a href="Homepage2.html" class="active">Home</a>
-                    <a href="newPage.html" class="active">About Us</a>
-                    <a href="#" class="active">Contact</a>
+                    <a href="Homepage draft 1 (simone).html" class="active">Home</a>
+                    <a href="AboutUs.html" class="active">About Us</a>
+                    <a href="ContactInfo.html" class="active">Contact</a>
                 </div>
                 <div class="data">
                     <p>this is where the info will go
