Homepage draft 1 (simone).html

--- a/Homepage draft 1 (simone).html
+++ b/Homepage draft 1 (simone).html
@@ -74,9 +74,8 @@
       .submit-btn {
         display: block;
         position: absolute;
-        left: 710px;
-        top: 335px;
         padding: 5px;
+        float: left;
       }
     </style>
   </head>
