Date, Flights html, and Flights js

--- a/Flights.html
+++ b/Flights.html
@@ -39,7 +39,7 @@ tr, th {
     <h2>Flights to <span id="country-name"></span></h2>
     <table id="flights-table">
       <tr>
-        <th>Flight Number</th>
+        <th>Country</th>
         <th>Departure City</th>
         <th>Arrival City</th>
         <th>Departure Time</th>
