--- a/Flights.html
+++ b/Flights.html
@@ -89,9 +89,19 @@ tr, th {
         <th>Departure Time</th>
         <th>Arrival Time</th>
       </tr>
+
+      <tr>
+        <td id="countries"></td>
+        <td id="departureCity"></td>
+        <td id="arrivalCity"></td>
+        <td id="departureTime"></td>
+        <td id="arrivalTime"></td>
+      </tr>
     </table>
 
+    <script src="flights.js"></script>
     <script>
+      /*
       // Get the country name from an earlier part of the website
       const countryName = "User's inputed Country"; // Example value, replace as needed
       document.querySelector("#country-name").innerHTML = countryName;
@@ -116,6 +126,7 @@ tr, th {
             flightsTable.appendChild(row);
           });
         });
-    </script>
+        **/
+    </script>    
   </body>
 </html>
