--- a/Website.html
+++ b/Website.html
@@ -16,7 +16,7 @@
     }
     h2 {
       font-size: 400%;
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
       background-color: rgb(243, 243, 243);
       padding: 20px;
       margin: 0;
@@ -88,7 +88,7 @@
     <h1>The Traveler's Handbook</h1>
   </header>
   <header class="header2">
-  <h2>Country</h2>
+  <h2 id="country">Country</h2>
 </header>
   <header class="header3">
   <div class="navbar">
@@ -112,7 +112,7 @@
     </a>
   </div>
 </header>
-  <a href="Flights.html">
+  <a id="flights">
     <div class="ribbon">
       <h2 id="flights">Flights</h2>
       <p>Get information about flight options, schedules, and prices for your destination.</p>
